--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
       - run:
           name: test
           command: yarn test
+      - run:
+          name: storybook
+          command: yarn storybook
       - store_artifacts:
           path: test-results.xml
           prefix: tests
