Add version 2 for workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
           key: cache-{{ checksum "package.json" }}
 
 workflows:
+  version: 2
   deploy:
     jobs:
       - build-storybook
