--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,12 +20,12 @@ jobs:
           command: npm install
       - run:
           name: Build Storybook
-          command: npm run build-storybook
+          command: yarn build-storybook
       - store_artifacts:
           path: storybook-static
       - run:
           name: Run Coverage
-          command: npm run test --collectCoverage --watchAll
+          command: yarn test --collectCoverage --watchAll
       - store_artifacts:
           path: test-coverage
       - run:
